@@ -40,72 +40,12 @@
  * This is required for builds against pgsql
  */
 PG_MODULE_MAGIC;
-#ifdef WIN32
-static void
-interruptCallback()
-{
-	if (UNBLOCKED_SIGNAL_QUEUE())
-		pgwin32_dispatch_queued_signals();
-}
-#endif
 
-static pqsigfunc coreIntHandler = 0;
-static void handleInterrupt(int sig);
-
-/*
- * Module load callback
- */
-void _PG_init(void);
-void
-_PG_init(void)
-{
-
-	coreIntHandler = pqsignal(SIGINT, handleInterrupt);
-
-#ifdef WIN32
-	GEOS_interruptRegisterCallback(interruptCallback);
-	lwgeom_register_interrupt_callback(interruptCallback);
-#endif
-
-	/* install PostgreSQL handlers */
-	pg_install_lwgeom_handlers();
-}
-
-/*
- * Module unload callback
- */
-void _PG_fini(void);
-void
-_PG_fini(void)
-{
-	elog(NOTICE, "Goodbye from PostGIS SFCGAL %s", POSTGIS_VERSION);
-	pqsignal(SIGINT, coreIntHandler);
-}
-
-static void
-handleInterrupt(int sig)
-{
-	/* NOTE: printf here would be dangerous, see
-	 * https://trac.osgeo.org/postgis/ticket/3644
-	 *
-	 * TODO: block interrupts during execution, to fix the problem
-	 */
-	/* printf("Interrupt requested\n"); fflush(stdout); */
-
-	/* request interruption of liblwgeom as well */
-	lwgeom_request_interrupt();
-
-	if (coreIntHandler)
-	{
-		(*coreIntHandler)(sig);
-	}
-}
-
-Datum postgis_sfcgal_version(PG_FUNCTION_ARGS);
-
+/* Prototypes */
 #if POSTGIS_SFCGAL_VERSION >= 10400
 Datum postgis_sfcgal_full_version(PG_FUNCTION_ARGS);
 #endif
+Datum postgis_sfcgal_version(PG_FUNCTION_ARGS);
 
 Datum sfcgal_from_ewkt(PG_FUNCTION_ARGS);
 Datum sfcgal_distance(PG_FUNCTION_ARGS);
@@ -140,8 +80,30 @@ Datum sfcgal_optimalalphashape(PG_FUNCTION_ARGS);
 
 GSERIALIZED *geometry_serialize(LWGEOM *lwgeom);
 char *text_to_cstring(const text *textptr);
+void _PG_init(void);
+void _PG_fini(void);
+
 
 static int __sfcgal_init = 0;
+
+
+/* Module load callback */
+void
+_PG_init(void)
+{
+	/* install PostgreSQL handlers */
+	pg_install_lwgeom_handlers();
+	elog(DEBUG1, "PostGIS SFCGAL %s loaded", POSTGIS_VERSION);
+}
+
+
+/* Module unload callback */
+void
+_PG_fini(void)
+{
+	elog(NOTICE, "Goodbye from PostGIS SFCGAL %s", POSTGIS_VERSION);
+}
+
 
 void
 sfcgal_postgis_init(void)
